* Added Codaset extension by jonathan.
* Added `event_ids` argument to Lifestream::get_events(). Note that this behavior depends on the `break_groups` argument.
* Added Foursquare extension by Jonathan Kern.
* Updated SimplePie to 1.2.
* Upon activating the plugin the default feed is now owned by the user performing the activation.

0.99.9.5

* Fixed settings panel.
* Added initial Kiva extension by ohnate.com.
* Support for non-permalink paging.

0.99.9.4

* Added `truncate_interval` option. Defaults to off. Used to truncate event history.
* Added the ability to start/stop (pause) a feeds updates.
* URLs should now support linking if they include a dash (-) or a percent sign (%).
* The Twitter extension will now properly link lists.
* Google Reader now supports username URLs.

0.99.9.3

* Some more potential fixes for Windows users and icon packs.
* Added Refined Extended icon pack by Paul Robert LLoyd.
* Fixed an issue with parsing extension files.
* Several validation issues for the RSS feed were fixed.
* Added Lifestream::get_rss_feed_url()
* Added Gowalla extension.
* Fixed Eventful feed.

0.99.9.2

* Fixed some issues with icon and css paths.
* Fixed an issue if you weren't using permalinks where pagination links were invalid.
* Updated and moved GitHub and Reddit into it's their extension file (Thanks Chromakode!).
* Fixed typo with upcoming.yahoo.com.
* Added missing `alt` attributes on images.
* All event `id` attributes will now be prefixed with `ls-`.
* Added eventful.com extension.
* Deleted events will no longer show up using `Lifestream::get_events()`

0.99.9.1

* Icons, Themes, and Extensions placed in the custom directory should now function properly.
* Icons located in the additional directory should now work properly.
* Updated Steam feed URL.
* LOTS of localization updates. Most languages will now be out of date on labels.
* Updated Facebook instructions thanks to James Brooks.
* Updated SimplePie to 1.2