@@ -6,6 +6,7 @@
 * Added Foursquare extension by Jonathan Kern.
 * Updated SimplePie to 1.2.
 * Upon activating the plugin the default feed is now owned by the user performing the activation.
+* Added much needed "less suck" to the GitHub extension.
 
 0.99.9.5
 
